src/org/whut/mc/server/core/util/yacclex/frame.output
Terminals unused in grammar

   CHR


Grammar

    0 $accept: frame $end

    1 frame: head BBP fields EBP

    2 fields: field
    3       | fields field
    4       | fields frame

    5 field: head type SPL NUM EOL

    6 head: name SPL
    7     | name BMP NUM EMP SPL

    8 type: INT_DECL
    9     | CHR_DECL
   10     | BYTE_DECL

   11 name: VAR


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 5 7
CHR (259)
VAR (260) 11
INT_DECL (261) 8
CHR_DECL (262) 9
BYTE_DECL (263) 10
SPL (264) 5 6 7
BBP (265) 1
EBP (266) 1
BMP (267) 7
EMP (268) 7
EOL (269) 5


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
frame (16)
    on left: 1, on right: 0 4
fields (17)
    on left: 2 3 4, on right: 1 3 4
field (18)
    on left: 5, on right: 2 3
head (19)
    on left: 6 7, on right: 1 5
type (20)
    on left: 8 9 10, on right: 5
name (21)
    on left: 11, on right: 6 7


State 0

    0 $accept: . frame $end

    VAR  shift, and go to state 1

    frame  go to state 2
    head   go to state 3
    name   go to state 4


State 1

   11 name: VAR .

    $default  reduce using rule 11 (name)


State 2

    0 $accept: frame . $end

    $end  shift, and go to state 5


State 3

    1 frame: head . BBP fields EBP

    BBP  shift, and go to state 6


State 4

    6 head: name . SPL
    7     | name . BMP NUM EMP SPL

    SPL  shift, and go to state 7
    BMP  shift, and go to state 8


State 5

    0 $accept: frame $end .

    $default  accept


State 6

    1 frame: head BBP . fields EBP

    VAR  shift, and go to state 1

    fields  go to state 9
    field   go to state 10
    head    go to state 11
    name    go to state 4


State 7

    6 head: name SPL .

    $default  reduce using rule 6 (head)


State 8

    7 head: name BMP . NUM EMP SPL

    NUM  shift, and go to state 12


State 9

    1 frame: head BBP fields . EBP
    3 fields: fields . field
    4       | fields . frame

    VAR  shift, and go to state 1
    EBP  shift, and go to state 13

    frame  go to state 14
    field  go to state 15
    head   go to state 16
    name   go to state 4


State 10

    2 fields: field .

    $default  reduce using rule 2 (fields)


State 11

    5 field: head . type SPL NUM EOL

    INT_DECL   shift, and go to state 17
    CHR_DECL   shift, and go to state 18
    BYTE_DECL  shift, and go to state 19

    type  go to state 20


State 12

    7 head: name BMP NUM . EMP SPL

    EMP  shift, and go to state 21


State 13

    1 frame: head BBP fields EBP .

    $default  reduce using rule 1 (frame)


State 14

    4 fields: fields frame .

    $default  reduce using rule 4 (fields)


State 15

    3 fields: fields field .

    $default  reduce using rule 3 (fields)


State 16

    1 frame: head . BBP fields EBP
    5 field: head . type SPL NUM EOL

    INT_DECL   shift, and go to state 17
    CHR_DECL   shift, and go to state 18
    BYTE_DECL  shift, and go to state 19
    BBP        shift, and go to state 6

    type  go to state 20


State 17

    8 type: INT_DECL .

    $default  reduce using rule 8 (type)


State 18

    9 type: CHR_DECL .

    $default  reduce using rule 9 (type)


State 19

   10 type: BYTE_DECL .

    $default  reduce using rule 10 (type)


State 20

    5 field: head type . SPL NUM EOL

    SPL  shift, and go to state 22


State 21

    7 head: name BMP NUM EMP . SPL

    SPL  shift, and go to state 23


State 22

    5 field: head type SPL . NUM EOL

    NUM  shift, and go to state 24


State 23

    7 head: name BMP NUM EMP SPL .

    $default  reduce using rule 7 (head)


State 24

    5 field: head type SPL NUM . EOL

    EOL  shift, and go to state 25


State 25

    5 field: head type SPL NUM EOL .

    $default  reduce using rule 5 (field)
